--- a/index.html
+++ b/index.html
@@ -6,45 +6,15 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <style>
-    .container {
-      max-width: 1100px;
-      margin: 0 auto;
-    }
-
-    .buttons {
-      display: flex;
-      flex-direction: row;
-      margin: 0 -5px;
-    }
-
-    a {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-decoration: none;
-      color: gray;
-      border: 1px solid gray;
-      width: 20px;
-      height: 20px;
-      margin: 5px;
-      border-radius: 3px;
-    }
-
-    .active {
-      color: black;
-    }
-  </style>
 </head>
 <body>
-  <div class="container">
-    <div class="buttons">
-      <a href="#" id="bold">B</a>
-      <a href="#" id="italic">I</a>
-      <a href="#" id="underline">U</a>
+<div id="products">
+  <div>
+    <div class="clss">
+      <p></p>
     </div>
-    <p id="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci commodi doloribus earum eius et natus officia recusandae voluptates. Aperiam blanditiis dolorum, earum excepturi laborum nemo nobis pariatur, praesentium quam reiciendis rem soluta vitae? Accusantium ad architecto asperiores, assumenda debitis, deserunt dolor earum, facilis incidunt libero nemo nihil sunt! Ab dolorem ea eos eveniet fuga fugiat harum incidunt laboriosam minus modi nesciunt, non officiis, quam quidem saepe, tempore ut! Adipisci commodi, cupiditate, enim, fugit in iste iusto libero minima molestiae nihil perspiciatis quidem quod tempora ut vitae? Culpa dicta est eum illum, impedit, ipsa ipsam, necessitatibus quas quibusdam quod repellat vero.</p>
   </div>
+</div>
 </body>
 <script src="main.js"></script>
 </html>
