--- a/index.html
+++ b/index.html
@@ -8,12 +8,8 @@
   <title>Document</title>
 </head>
 <body>
-<div id="products">
-  <div>
-    <div class="clss">
-      <p></p>
-    </div>
-  </div>
+<div id="div0" style="padding: 20px">
+  click me
 </div>
 </body>
 <script src="main.js"></script>
