--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 <div id="div0" style="padding: 20px">
   click me
 </div>
+<div id="div1" style="padding: 20px">
+  click me
+</div>
+<div id="div2" style="padding: 20px">
+  click me
+</div>
+
+<div id="text"></div>
+
 </body>
 <script src="main.js"></script>
 </html>
