--- a/index.html
+++ b/index.html
@@ -9,16 +9,8 @@
 </head>
 <body>
 <div id="div0" style="padding: 20px">
-  click me
+  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore fugiat fugit non quaerat unde. At ducimus fugiat laudantium nostrum voluptatibus.
 </div>
-<div id="div1" style="padding: 20px">
-  click me
-</div>
-<div id="div2" style="padding: 20px">
-  click me
-</div>
-
-<div id="text"></div>
 
 </body>
 <script src="main.js"></script>
