--- a/coursework/index.html
+++ b/coursework/index.html
@@ -18,7 +18,13 @@
       </div>
     </div>
   </header>
-  <main id="products" class="container"></main>
+  <main class="products container">
+    <div class="products__header">
+      <h3>Electronics</h3>
+      <div>Sort by price: <a id="sort" href="#" class="products__sort">Asc</a></div>
+    </div>
+    <div id="products"></div>
+  </main>
 <script src="./js/main.js"></script>
 </body>
 </html>
